# UVMS-Grasping-with-Generative-Policies

./: .gitignore  CMakeLists.txt  README.md  package.xml  setup.py
config/: ablation_report.yaml  active_joints_left_arm.yaml  b8_bc_h8_xyz_base_relative_execution_smoke.yaml  b8_bc_h8_xyz_base_relative_rollout_dry_run.yaml  b8_bc_h8_xyz_rollout_dry_run.yaml  batch_collection.yaml  data_collection.yaml  eval_rollout.yaml  task_grasp.yaml  topics.yaml  train_bc.yaml  train_bc_b8_primary30.yaml  train_bc_b8_primary30_h8_xyz.yaml  train_bc_b8_primary30_h8_xyz_base_relative_safe_norm.yaml  train_bc_b8_primary30_sanity.yaml  train_diffusion.yaml  train_diffusion_b8_primary30.yaml  train_diffusion_b8_primary30_epoch30.yaml  train_diffusion_b8_primary30_h8_smoke.yaml  train_diffusion_b8_primary30_h8_xyz_base_relative_safe_norm_epoch30.yaml  train_diffusion_b8_primary30_h8_xyz_base_relative_safe_norm_epoch30_seed85.yaml  train_diffusion_b8_primary30_h8_xyz_base_relative_safe_norm_epoch30_seed86.yaml  train_diffusion_b8_primary30_h8_xyz_base_relative_safe_norm_epoch30_seed86_action_select.yaml  train_diffusion_b8_primary30_h8_xyz_base_relative_safe_norm_epoch30_seed86_w128.yaml  train_diffusion_b8_primary30_h8_xyz_base_relative_safe_norm_epoch30_seed86_x0aux0p1.yaml  train_diffusion_b8_primary30_h8_xyz_base_relative_safe_norm_epoch30_seed86_x0aux0p1_dimw025_1_1.yaml  train_diffusion_b8_primary30_h8_xyz_base_relative_safe_norm_smoke.yaml  train_diffusion_b8_primary30_h8_xyz_smoke.yaml  train_diffusion_b8_primary30_smoke.yaml  train_flow_matching.yaml  train_flow_matching_b8_primary30.yaml  train_flow_matching_b8_primary30_epoch30.yaml  train_flow_matching_b8_primary30_h8_smoke.yaml  train_flow_matching_b8_primary30_h8_xyz_base_relative_safe_norm_epoch30.yaml  train_flow_matching_b8_primary30_h8_xyz_base_relative_safe_norm_epoch30_action_select.yaml  train_flow_matching_b8_primary30_h8_xyz_base_relative_safe_norm_smoke.yaml  train_flow_matching_b8_primary30_h8_xyz_epoch30.yaml  train_flow_matching_b8_primary30_h8_xyz_smoke.yaml  train_flow_matching_b8_primary30_smoke.yaml
data/raw/: b1_live_state_smoke.metadata.json  b1_live_state_smoke.npz  b3_eef_tf_smoke.metadata.json  b3_eef_tf_smoke.npz  stage4_smoke_runtime.metadata.json  stage4_smoke_runtime.npz  stage5_scripted_expert_smoke.metadata.json  stage5_scripted_expert_smoke.npz  stage5_scripted_expert_smoke_v2.metadata.json  stage5_scripted_expert_smoke_v2.npz
data/raw/b5b_smoke/: b5b_arm_only_smoke.metadata.json  b5b_arm_only_smoke.npz
data/raw/b5c_smoke/: b5c_static_target_recorder_smoke.metadata.json  b5c_static_target_recorder_smoke.npz
data/raw/b5d_reaching_precheck/: b5d_base_relative_target_no_arm.metadata.json  b5d_base_relative_target_no_arm.npz  b5d_reaching_baseline_live_near_target.metadata.json  b5d_reaching_baseline_live_near_target.npz  b5d_reaching_baseline_near_target.metadata.json  b5d_reaching_baseline_near_target.npz  b5d_reaching_baseline_no_control.metadata.json  b5d_reaching_baseline_no_control.npz
data/raw/b5d_reaching_smoke/: b5d_target_directed_arm_multistep_base_frame.metadata.json  b5d_target_directed_arm_multistep_base_frame.npz  (+6 more)
docs/: BLOCKER_DEBUG_LOG.md  CODEX_GUIDE.md  CURRENT_STATUS.md  DATASET_SCHEMA.md  DATA_COLLECTION_LOG.md  EXPERIMENT_LOG.md  EXPERT_POLICY_PLAN.md  FINAL_DEMO_SUMMARY.md  PROJECT_CONTEXT.md  STAGE_PROGRESS.md  TASK_DEFINITION.md  TODO.md  TOPIC_MAP_RUNTIME.md  TRAINING_PLAN.md
launch/: b5d_move_group_with_context.launch  b8_bc_h8_xyz_base_relative_execution_smoke.launch  b8_bc_h8_xyz_base_relative_rollout_dry_run.launch  b8_bc_h8_xyz_rollout_dry_run.launch  b8_reaching_tuned_episode.launch  b8_reaching_tuned_v2_episode.launch  b8_reaching_tuned_v3_episode.launch  b8_target_gate_probe.launch  collect_episode.launch  load_left_controllers.launch  record_episode.launch  rollout_policy.launch  world_base_tf_bridge.launch
learning/datasets/: __init__.py  uvms_episode_dataset.py
learning/eval/: __init__.py  ablation_report.py  eval_offline.py  eval_rollout.py  policy_runtime.py
learning/models/: __init__.py  bc_policy.py  diffusion_policy.py  flow_matching_policy.py
learning/train/: __init__.py  train_bc.py  train_diffusion.py  train_flow_matching.py
models/cylinder_target/: model.sdf
models/cylinder_target_static/: model.sdf
scripts/: analyze_b8_base_relative_rollout_readiness.py  analyze_b8_command_motion_path.py  analyze_b8_debug_batch_failure.py  analyze_b8_dp30_seed_ablation_validation.py  analyze_b8_dp_action_selection_validation.py  analyze_b8_dp_architecture_ablation_validation.py  analyze_b8_dp_fm_loss_action_alignment.py  analyze_b8_dp_fm_post_live_smoke_gate.py  analyze_b8_dp_fm_post_tick9_offline_gate.py  analyze_b8_dp_fm_sampling_after_seed_ablation.py  analyze_b8_dp_fm_validation_windows.py  analyze_b8_dp_objective_timestep_diagnostic.py  analyze_b8_dp_x0_aux_validation.py  analyze_b8_n3_repeatability_failure.py  analyze_b8_n3_tick_clip_sensitivity.py  analyze_b8_reaching_direction.py  analyze_b8_reaching_quality.py  analyze_b8_target_drift_readiness_gate.py  analyze_b8_tick9_vs_n3_tick5.py  b5a_ee_delta_ik_check.py  b8_bc_h8_xyz_base_relative_execution_smoke_node.py  b8_bc_h8_xyz_base_relative_rollout_dry_run_node.py  b8_bc_h8_xyz_rollout_dry_run_node.py  base_relative_target.py  batch_collect_episodes.py  check_b8_initial_state_gate.py  dp_fm_episode_recorder.py  generate_b8_base_relative_tiny_smoke_checklist.py  generate_b8_dp_fm_presentation_results.py  odom_tf_bridge.py  plan_b8_dp30_focused_offline_ablation.py  reset_b8_target_gate_probe.py  return_left_arm_to_reference.py  rollout_policy_node.py  run_b8_bc_dp_fm_live_eval.py  run_b8_postfix_debug_batch_conservative.py  scripted_expert.py  summarize_b8_base_relative_tiny_repeatability.py  summarize_b8_base_relative_tiny_smoke.py  summarize_b8_bc_dp_fm_success_rate.py  (+3 more)
src/rexrov_single_oberon7_fm_dp/: action_converter.py  arm_command_converter.py  base_relative_target.py  dataset_writer.py  expert_policy.py  odom_tf_bridge.py  recorder.py  ros_interface.py  success_checker.py
(+214 files in other folders)
